// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client creates a new client with default values 1`] = `
Array [
  Array [
    Object {
      "credentials": "include",
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json; charset=utf-8",
      },
      "prefixUrl": "https://example.io/api",
      "timeout": 1000,
    },
  ],
]
`;

exports[`client sets custom options 1`] = `
Array [
  Array [
    Object {
      "credentials": "same-origin",
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json; charset=utf-8",
      },
      "prefixUrl": "https://example.io/api",
      "timeout": 1000,
    },
  ],
]
`;
